[project]
name = "drf-toon"
version = "0.1.0"
description = "Native TOON parser and renderer for Django Rest Framework."
readme = "README.md"
authors = [
    { name = "Dash Winterson", email = "dashdanw@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.16",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "toons>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
