[project]
name = "drf-toon"
version = "0.1.0"
description = "Native TOON parser and renderer for Django Rest Framework."
readme = "README.md"
authors = [
    { name = "Dash Winterson", email = "dashdanw@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.16",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "toons>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "drf-spectacular>=0.27.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]

