[project]
name = "drf-toon"
version = "0.1.0"
description = "Native TOON parser and renderer for Django Rest Framework."
readme = "README.md"
authors = [
    { name = "Dash Winterson", email = "dashdanw@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.16",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "toons>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "drf-spectacular>=0.27.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.8.0",
    "ruff>=0.6.0",
]


[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "--cov=drf_toon --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["drf_toon"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["drf_toon"]

[tool.coverage.report]
show_missing = true

